# metademocracia_dao_v2

./: .gitignore  README.md  v3_code_hash_result.txt
factory/: Cargo.toml  implementacion.txt  implementacion_mainnet.txt
factory/res/: metadao_dao_v1.wasm
factory/src/: factory_manager.rs  lib.rs
factory/upgrade/: base64_content.txt  metadao_dao_v1_1.wasm  upgrade.sh  upgrade2.sh
graph/: package-lock.json  package.json  schema.graphql  subgraph minnet.yaml  subgraph testnet.yaml
graph/src/: mapping.ts  mapping_usdt.ts
graph/src/lib/: config.ts  daos.ts  factory.ts  near_token.ts  tokens.ts
graph_old/: schema.graphql  subgraph minnet.yaml  subgraph testnet.yaml  subgraph.yaml
graph_old/src/: mapping_1.ts
metadao/: Cargo.toml
metadao/src/: bounties.rs  delegation.rs  lib.rs  policy.rs  proposals.rs  types.rs  upgrade.rs  views.rs
