[package]
name = "metadao-factory"
version = "0.2.0"
authors = ["Illia Polosukhin <illia.polosukhin@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "4.0.0-pre.4", features = ["unstable"]  }

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.4"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
